<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_debt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fistelo.debthelper.NewDebtActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/DebtCreationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleNewDebtTextView"
                android:textSize="27sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/betweenItemsMargin" />

            <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:id="@+id/autoCompleteTextView"
        android:hint="@string/DebtNameHint"
                android:layout_marginBottom="@dimen/betweenItemsMargin" />


            <LinearLayout
        android:id="@+id/linearLayoutPrice"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="@dimen/betweenItemsMargin"
                android:layout_weight="0.03">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:layout_width="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/Prize"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_weight="0.91" />

            <EditText
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText4"
                android:textAlignment="center"
                android:text="0" />

        </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/NumberOfPeople"
                        android:id="@+id/textView4"
                        android:layout_height="match_parent"
                        android:layout_width="63dp" />

                    <Button
                        android:text="+"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/plusPerson" />

                    <Button
                        android:text="-"
                        android:layout_width="47dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/minusPerson" />

                </LinearLayout>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/debt_description_ET"
                tools:hint="@string/DebtDescription"
                android:layout_marginBottom="@dimen/betweenItemsMargin" />

            <CheckBox
                android:text="@string/includeme_checkbox"
                android:layout_height="wrap_content"
                android:id="@+id/includeMeCheckbox"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/betweenItemsMargin" />

            <ListView
                android:layout_width="wrap_content"
                android:id="@+id/people_list_view"
                android:headerDividersEnabled="false"
                android:layout_height="130dp"
                android:footerDividersEnabled="false"
                android:layout_marginBottom="@dimen/betweenItemsMargin" />

            <Button
        android:text="@string/add_debt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_debt_button"
        android:layout_marginTop="10dp"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
